deploy/deployment-udagram-api-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-api-user
  labels:
    app: udagram-api-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udagram-api-user
  template:
    metadata:
      labels:
        app: udagram-api-user
    spec:
      containers:
      - name: udagram-api-user
        image: chuksonu/udagram-api-user
        imagePullPolicy: Always          
        resources:
          requests:
            memory: "900Mi"
            cpu: "500m"
          limits:
            memory: "1600Mi"
            cpu: "700m"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: aws-secret
          mountPath: "/root/.aws/"
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: aws-secret
        secret:
          secretName: aws-secret
