deploy/deployment-udagram-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-frontend
  labels:
    app: udagram-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udagram-frontend
  template:
    metadata:
      labels:
        app: udagram-frontend
    spec:
      containers:
      - name: udagram-frontend
        image: chuksonu/udagram-frontend:prod-done
        imagePullPolicy: Always          
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m"
          limits:
            memory: "900Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
