deploy/deployment-udagram-reverseproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-reverseproxy
  labels:
    app: udagram-reverseproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udagram-reverseproxy
  template:
    metadata:
      labels:
        app: udagram-reverseproxy
    spec:
      containers:
      - name: udagram-reverseproxy
        image: chuksonu/udagram-reverseproxy
        imagePullPolicy: Always          
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "900Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
