deploy/service-udagram-api-user.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: udagram-api-user
  name: backend-user
  namespace: default
  selfLink: /api/v1/namespaces/default/services/udagram-api-user-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: udagram-api-user
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
