deploy/service-udagram-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: udagram-frontend
  name: udagram-frontend
  namespace: default
  selfLink: /api/v1/namespaces/default/services/udagram-frontend-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: udagram-frontend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
