deploy/service-udagram-reverseproxy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: udagram-reverseproxy
  name: udagram-reverseproxy
  namespace: default
  selfLink: /api/v1/namespaces/default/services/udagram-reverseproxy-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: udagram-reverseproxy
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
